@@ -1270,7 +1270,7 @@ int php_oci_bind_array_by_name(php_oci_statement *statement, char *name, int nam
 								(dvoid *) bindp->array.elements, 
 								(sb4) bind->array.max_length,
 								type,
-								(dvoid *)0, /* bindp->array.indicators, */
+								(dvoid *)bindp->array.indicators,
 								(ub2 *)bind->array.element_lengths,
 								(ub2 *)0, /* bindp->array.retcodes, */
 								(ub4) max_table_length,
@@ -1320,6 +1320,8 @@ php_oci_bind *php_oci_bind_array_helper_string(zval* var, long max_table_length,
 	bind->array.max_length		= maxlength;
 	bind->array.element_lengths	= safe_emalloc(max_table_length, sizeof(ub2), 0);
 	memset(bind->array.element_lengths, 0, max_table_length*sizeof(ub2));
+	bind->array.indicators		= safe_emalloc(max_table_length, sizeof(sb2), 0);
+	memset(bind->array.indicators, 0, max_table_length*sizeof(sb2));
 	
 	zend_hash_internal_pointer_reset(hash);
 	
@@ -1327,6 +1329,9 @@ php_oci_bind *php_oci_bind_array_helper_string(zval* var, long max_table_length,
 		if (zend_hash_get_current_data(hash, (void **) &entry) != FAILURE) {
 			convert_to_string_ex(entry);
 			bind->array.element_lengths[i] = Z_STRLEN_PP(entry); 
+			if (Z_STRLEN_PP(entry) == 0) {
+				bind->array.indicators[i] = -1;
+			}
 			zend_hash_move_forward(hash);
 		} else {
 			break;
@@ -1372,6 +1377,7 @@ php_oci_bind *php_oci_bind_array_helper_number(zval* var, long max_table_length 
 	bind->array.max_length		= sizeof(ub4);
 	bind->array.element_lengths	= safe_emalloc(max_table_length, sizeof(ub2), 0);
 	memset(bind->array.element_lengths, 0, max_table_length * sizeof(ub2));
+	bind->array.indicators		= NULL;
 	
 	zend_hash_internal_pointer_reset(hash);
 	for (i = 0; i < max_table_length; i++) {
@@ -1409,6 +1415,7 @@ php_oci_bind *php_oci_bind_array_helper_double(zval* var, long max_table_length 
 	bind->array.max_length		= sizeof(double);
 	bind->array.element_lengths	= safe_emalloc(max_table_length, sizeof(ub2), 0);
 	memset(bind->array.element_lengths, 0, max_table_length * sizeof(ub2));
+	bind->array.indicators		= NULL;
 	
 	zend_hash_internal_pointer_reset(hash);
 	for (i = 0; i < max_table_length; i++) {
@@ -1446,6 +1453,7 @@ php_oci_bind *php_oci_bind_array_helper_date(zval* var, long max_table_length, p
 	bind->array.max_length		= sizeof(OCIDate);
 	bind->array.element_lengths	= safe_emalloc(max_table_length, sizeof(ub2), 0);
 	memset(bind->array.element_lengths, 0, max_table_length * sizeof(ub2));
+	bind->array.indicators		= NULL;
 
 	zend_hash_internal_pointer_reset(hash);
 	for (i = 0; i < max_table_length; i++) {
